# claude-pulse

./: .gitignore  AGENTS.md  CONTINUATION.md  LICENSE  README.md
app/: package.json
app/src/: app.js  index.html  styles.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs  main.rs
collector/: opencode-source.ts  package.json  poller.ts  proxy.ts  web.ts
docs/: RATE_LIMITS.md  ROADMAP.md  WEB_SHARING.md
qalarc.com/: PROJECTS.md  projects.json
qalarc.com/projects/claude-ratelimit-monitor/: FINDINGS.md  METHOD.md  README.md
