[package]
name = "claude-pulse"
version = "0.3.0"
description = "Claude API usage monitor with an accelerometer-style live gauge"
authors = ["fivelidz"]
edition = "2021"

[lib]
name = "claude_pulse_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
